Kelsey Development Sandbox/src/objects/DS_TRDETAIL1__c.object
<CustomObject>
    <fields>
        <fullName>T9RRAD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Radiological</description>
        <label>T9RRAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T9RRMA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Rocket and Mortar Attacks</description>
        <label>T9RRMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T9RWPNU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Weapon type Unknown</description>
        <label>T9RWPNU</label>
        <type>Checkbox</type>
    </fields>
    <label>DS TRDETAIL1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRDETAIL1-{000000}</displayFormat>
        <label>DS TRDETAIL1 ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DS TRDETAIL1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TRABUSE_must_indicate_injury_victim</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T4RINJ, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T4RINJ__c, &apos;1&apos;) &amp;&amp; AND((T4RINJC__c = false),(T4RINJP__c = false),(T4RINJAR__c = false),(T4RINJUA__c = false),(T4RINJSB__c = false),(T4RINJOY__c = false),(T4RINJO__c = false))</errorConditionFormula>
        <errorDisplayField>T4RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom the injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRABUSE_must_specify_injury_victim</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T4RINJO__c = true &amp;&amp; ISBLANK(T4RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T4RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRABUSE_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T4RSETO__c = true &amp;&amp; ISBLANK(T4RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T4RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRACCIDENT_must_indicate_to_whom</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T12RDIS, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T12RDIS__c, &apos;1&apos;) &amp;&amp; AND((T12RDISC__c = false),(T12RDISP__c = false),(T12RDISOR__c = false),(T12RDISUA__c = false),(T12RDISSB__c = false),(T12RDISOY__c = false),(T12RDISO__c = false))</errorConditionFormula>
        <errorDisplayField>T12RDIS__c</errorDisplayField>
        <errorMessage>Please indicate to whom the permanent disability/death was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRACCIDENT_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T12RSETO__c = true &amp;&amp; ISBLANK(T12RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T12RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRACCIDENT_must_specify_type_accident</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T12ROTHR__c = true &amp;&amp; ISBLANK(T12ROTHSP__c)</errorConditionFormula>
        <errorDisplayField>T12ROTHSP__c</errorDisplayField>
        <errorMessage>Please specify the type of accident.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRACCIDENT_must_specify_type_death_disab</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T12RDISO__c = true &amp;&amp; ISBLANK(T12RDISOS__c)</errorConditionFormula>
        <errorDisplayField>T12RDISOS__c</errorDisplayField>
        <errorMessage>Please specify to whom the disability/death inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMMEXP_must_indicate_compensation</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T3RCMP, must specify the form of compensation by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T3RCMP__c, &apos;1&apos;) &amp;&amp; AND((T3RCMPM__c = false),(T3RCMPF__c = false),(T3RCMPMP__c = false),(T3RCMPS__c = false),(T3RCMPFD__c = false),(T3RCMPD__c = false),(T3RCMPPS__c = false),(T3RCMPSA__c = false),(T3RCMPO__c = false))</errorConditionFormula>
        <errorDisplayField>T3RCMP__c</errorDisplayField>
        <errorMessage>Please indicate the type of compensation received.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMMEXP_must_indicate_threat_injury</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T3RTHI, must specify the way in which the child was threatened or injured by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T3RTHI__c, &apos;1&apos;) &amp;&amp; AND((T3RTHIP__c = false),(T3RTHIT__c = false),(T3RTHIFA__c = false),(T3RTHIDU__c = false),(T3RTHIR__c = false),(T3RTHICS__c = false),(T3RTHIHF__c = false),(T3RTHIO__c = false))</errorConditionFormula>
        <errorDisplayField>T3RTHI__c</errorDisplayField>
        <errorMessage>Please indicate the nature of the threat or injury.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMMEXP_must_specify_compensation</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T3RCMPO__c = true &amp;&amp; ISBLANK(T3RCMPOS__c)</errorConditionFormula>
        <errorDisplayField>T3RCMPO__c</errorDisplayField>
        <errorMessage>Please specify the other compensation received.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMMEXP_must_specify_means</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T3RMENO__c = true &amp;&amp; ISBLANK(T3RMENOS__c)</errorConditionFormula>
        <errorDisplayField>T3RMENOS__c</errorDisplayField>
        <errorMessage>Please specify the means by/through which the child was exploited/trafficked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMMEXP_must_specify_perpetrator</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T3RPERO__c = true &amp;&amp; ISBLANK(T3RPEROS__c)</errorConditionFormula>
        <errorDisplayField>T3RPERO__c</errorDisplayField>
        <errorMessage>Please specify purchaser(s)/perpetrator(s) of the exploitation or service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMMEXP_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T3RSETO__c = true &amp;&amp; ISBLANK(T3RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T3RSETO__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRCOMMEXP_must_specify_threat_injury</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T3RTHIO__c = true &amp;&amp; ISBLANK(T3RTHIOS__c)</errorConditionFormula>
        <errorDisplayField>T3RTHIO__c</errorDisplayField>
        <errorMessage>Please specify the other threat or injury.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRDOMVIO_must_indicate_injury_victim</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T8RINJ, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T8RINJ__c, &apos;1&apos;) &amp;&amp; AND((T8RINJC__c = false),(T8RINJP__c = false),(T8RINJAR__c = false),(T8RINJUA__c = false),(T8RINJSB__c = false),(T8RINJOY__c = false),(T8RINJO__c = false))</errorConditionFormula>
        <errorDisplayField>T8RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom the injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRDOMVIO_must_specify_injury_victim</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T8RINJO__c = true &amp;&amp; ISBLANK(T8RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T8RINJO__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRDOMVIO_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T8RSETO__c = true &amp;&amp; ISBLANK(T8RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T8RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRMEDICAL_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T11RSETO__c = true &amp;&amp; ISBLANK(T11RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T11RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRNATURALDIS_must_indicate_to_whom</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T13RINJ, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T13RINJ__c, &apos;1&apos;) &amp;&amp; AND((T13RINJC__c = false),(T13RINJP__c = false),(T13RINJAR__c = false),(T13RINJUA__c = false),(T13RINJSB__c = false),(T13RINJOY__c = false),(T13RINJO__c = false))</errorConditionFormula>
        <errorDisplayField>T13RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom the serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRNATURALDIS_must_specify_injury_victim</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T13RINJO__c = true &amp;&amp; ISBLANK(T13RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T13RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRNATURALD_must_specify_type_disaster</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T13ROTH__c = true &amp;&amp; ISBLANK(T13ROTHS__c)</errorConditionFormula>
        <errorDisplayField>T13ROTHS__c</errorDisplayField>
        <errorMessage>Please specify the type of disaster involved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRNEGLECT_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T7RSETO__c = true &amp;&amp; ISBLANK(T7RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T7RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRNEGLECT_must_specify_type_neglect</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T7RTYPOTH__c = true &amp;&amp; ISBLANK(T7RTYPOS__c)</errorConditionFormula>
        <errorDisplayField>T7RTYPOS__c</errorDisplayField>
        <errorMessage>Please specify the type of neglect involved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRPHYCHABUSE_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T6RSETO__c = true &amp;&amp; ISBLANK(T6RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T6RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRPHYSASLT_must_indicate_injury_victim</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T5RINJ, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T5RINJ__c, &apos;1&apos;) &amp;&amp; AND((T5RINJC__c = false),(T5RINJP__c = false),(T5RINJAR__c = false),(T5RINJUA__c = false),(T5RINJSB__c = false),(T5RINJOY__c = false),(T5RINJO__c = false))</errorConditionFormula>
        <errorDisplayField>T5RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom the injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRPHYSASLT_must_specify_injury_victim</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T5RINJO__c = true &amp;&amp; ISBLANK(T5RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T5RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRPHYSASLT_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T5RSETO__c = true &amp;&amp; ISBLANK(T5RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T5RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRPSYCHABUSE_must_specify_type_mal</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T6RMTYPOTH__c = true &amp;&amp; ISBLANK(T6RMTYPOS__c)</errorConditionFormula>
        <errorDisplayField>T6RMTYPOS__c</errorDisplayField>
        <errorMessage>Please specify the type of maltreatment involved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEXASLT_must_indicate_to_whom_injury</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T2RINJ, must specify to whom by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T2RINJ__c, &apos;1&apos;) &amp;&amp; AND((T2RINJC__c = false),(T2RINJP__c = false),(T2RINJAR__c = false),(T2RINJUA__c = false),(T2RINJSB__c = false),(T2RINJOY__c = false),(T2RINJO__c = false))</errorConditionFormula>
        <errorDisplayField>T2RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEXASLT_must_specify_injury_victim</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T2RINJO__c = true &amp;&amp; ISBLANK(T2RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T2RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEXASLT_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T2RINJO__c = true &amp;&amp; ISBLANK(T2RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T2RINJ__c</errorDisplayField>
        <errorMessage>Please specify the setting for this experience.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEX_must_indicate_to_whom_injury</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T1RINJ, must specify to whom by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T1RINJ__c, &apos;1&apos;) &amp;&amp; AND((T1RINJC__c = false),(T1RINJP__c = false),(T1RINJAR__c = false),(T1RINJUA__c = false),(T1RINJSB__c = false),(T1RINJOY__c = false),(T1RINJO__c = false))</errorConditionFormula>
        <errorDisplayField>T1RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEX_must_specify_other_injury_victim</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T1RINJO__c = true &amp;&amp; ISBLANK(T1RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T2RINJOS__c</errorDisplayField>
        <errorMessage>Please specify the other victim of serious injury</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRSEX_must_specify_other_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T1RSETO__c = true &amp;&amp; ISBLANK(T1RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T1RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the other setting for this experience.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRWAROUTUS_must_indicate_injury_victim</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T10RINJ, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T10RINJ__c, &apos;1&apos;) &amp;&amp; AND((T10RINJC__c = false),(T10RINJP__c = false),(T10RINJAR__c = false),(T10RINJUA__c = false),(T10RINJSB__c = false),(T10RINJOY__c = false),(T10RINJO__c = false))</errorConditionFormula>
        <errorDisplayField>T10RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom the injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRWAROUTUS_must_specify_injury_victim</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T10RINJO__c = true &amp;&amp; ISBLANK(T10RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T10RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRWAROUTUS_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T10RSETO__c = true &amp;&amp; ISBLANK(T10RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T10RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRWAR_must_indicate_injury_victim</fullName>
        <active>true</active>
        <description>If &quot;Yes&quot; (1) to T9RINJ, must specify &quot;to whom&quot; by choosing one of the following:</description>
        <errorConditionFormula>ISPICKVAL(T9RINJ__c, &apos;1&apos;) &amp;&amp; AND((T9RINJC__c = false),(T9RINJP__c = false),(T9RINJAR__c = false),(T9RINJUA__c = false),(T9RINJSB__c = false),(T9RINJOY__c = false),(T9RINJO__c = false))</errorConditionFormula>
        <errorDisplayField>T9RINJ__c</errorDisplayField>
        <errorMessage>Please indicate to whom the injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRWAR_must_specify_injury_victim</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T9RINJO__c = true &amp;&amp; ISBLANK(T9RINJOS__c)</errorConditionFormula>
        <errorDisplayField>T9RINJOS__c</errorDisplayField>
        <errorMessage>Please specify to whom serious injury was inflicted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRWAR_must_specify_setting</fullName>
        <active>true</active>
        <description>If OTHER selected, this must be completed</description>
        <errorConditionFormula>T9RSETO__c = true &amp;&amp; ISBLANK(T9RSETOS__c)</errorConditionFormula>
        <errorDisplayField>T9RSETOS__c</errorDisplayField>
        <errorMessage>Please specify the setting of the experience</errorMessage>
    </validationRules>
</CustomObject>